fir_parser.output
Grammar

    0 $accept: file $end

    1 file: declarations

    2 declarations: declaration
    3             | declarations declaration

    4 declaration: var ';'
    5            | function

    6 var: type '*' tIDENTIFIER '=' expr
    7    | type '?' tIDENTIFIER '=' expr
    8    | type tIDENTIFIER '=' expr
    9    | type '*' tIDENTIFIER
   10    | type '?' tIDENTIFIER
   11    | type tIDENTIFIER

   12 function: type '?' tIDENTIFIER '(' variables ')' default_return_value body
   13         | type '*' tIDENTIFIER '(' variables ')' default_return_value body
   14         | type tIDENTIFIER '(' variables ')' default_return_value body
   15         | type '?' tIDENTIFIER '(' ')' default_return_value body
   16         | type '*' tIDENTIFIER '(' ')' default_return_value body
   17         | type tIDENTIFIER '(' ')' default_return_value body
   18         | type '?' tIDENTIFIER '(' variables ')' body
   19         | type '*' tIDENTIFIER '(' variables ')' body
   20         | type tIDENTIFIER '(' variables ')' body
   21         | type '?' tIDENTIFIER '(' ')' body
   22         | type '*' tIDENTIFIER '(' ')' body
   23         | type tIDENTIFIER '(' ')' body

   24 default_return_value: tARROW literals

   25 literals: %empty
   26         | tINTEGER

   27 variables: variable
   28          | variables ',' variable

   29 variable: type tIDENTIFIER

   30 body: prologo
   31     | block
   32     | epilogo
   33     | prologo block epilogo
   34     | %empty

   35 prologo: '@' block

   36 epilogo: tBIG block

   37 block: '{' block_declarations instructions '}'
   38      | '{' block_declarations '}'
   39      | '{' instructions '}'
   40      | '{' '}'

   41 block_declarations: block_declaration
   42                   | block_declarations block_declaration

   43 block_declaration: type tIDENTIFIER '=' expr ';'
   44                  | type tIDENTIFIER ';'
   45                  | tIDENTIFIER function_call

   46 instructions: instruction
   47             | instructions instruction

   48 instruction: expr ';'
   49            | tWRITE expression ';'
   50            | tWRITELN expression ';'
   51            | tLEAVE tINTEGER ';'
   52            | tLEAVE ';'
   53            | tRESTART tINTEGER ';'
   54            | tRESTART ';'
   55            | tRETURN
   56            | conditional_instruction
   57            | iteraction_instruction
   58            | block
   59            | tFOR '(' expr ',' expr ',' expr ')' instruction tOTHERWISE instruction

   60 conditional_instruction: tIF expr tTHEN instruction else
   61                        | tIF expr tTHEN instruction

   62 else: tELSE instruction

   63 iteraction_instruction: tWHILE expr tDO instruction finally
   64                       | tWHILE expr tDO instruction

   65 finally: tFINALLY instruction

   66 expression: expr
   67           | expression ',' expr

   68 type: tINT_TYPE
   69     | tFLOAT_TYPE
   70     | tSTRING_TYPE
   71     | tVOID_TYPE
   72     | '<' type '>'

   73 expr: tINTEGER
   74     | tFLOAT
   75     | string
   76     | tNULL
   77     | '-' expr
   78     | '+' expr
   79     | '~' expr
   80     | expr '+' expr
   81     | expr '-' expr
   82     | expr '*' expr
   83     | expr '/' expr
   84     | expr '%' expr
   85     | expr '<' expr
   86     | expr '>' expr
   87     | expr tGE expr
   88     | expr tLE expr
   89     | expr tNE expr
   90     | expr tEQ expr
   91     | expr tAND expr
   92     | expr tOR expr
   93     | tSIZEOF '(' expr ')'
   94     | '(' expr ')'
   95     | '[' expr ']'
   96     | lval
   97     | lval '=' expr
   98     | lval '?'
   99     | function_call

  100 lval: tIDENTIFIER
  101     | expr '[' expr ']'

  102 string: tSTRING
  103       | string tSTRING

  104 function_call: tIDENTIFIER '(' expression ')'
  105              | tIDENTIFIER '(' ')'


Terminals, with rules where they appear

$end (0) 0
'%' (37) 84
'(' (40) 12 13 14 15 16 17 18 19 20 21 22 23 59 93 94 104 105
')' (41) 12 13 14 15 16 17 18 19 20 21 22 23 59 93 94 104 105
'*' (42) 6 9 13 16 19 22 82
'+' (43) 78 80
',' (44) 28 59 67
'-' (45) 77 81
'/' (47) 83
';' (59) 4 43 44 48 49 50 51 52 53 54
'<' (60) 72 85
'=' (61) 6 7 8 43 97
'>' (62) 72 86
'?' (63) 7 10 12 15 18 21 98
'@' (64) 35
'[' (91) 95 101
']' (93) 95 101
'{' (123) 37 38 39 40
'}' (125) 37 38 39 40
'~' (126) 79
error (256)
tINTEGER (258) 26 51 53 73
tFLOAT (259) 74
tIDENTIFIER (260) 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    29 43 44 45 100 104 105
tSTRING (261) 102 103
tWHILE (262) 63 64
tIF (263) 60 61
tRESTART (264) 53 54
tFINALLY (265) 65
tWRITE (266) 49
tWRITELN (267) 50
tLEAVE (268) 51 52
tRETURN (269) 55
tELSE (270) 62
tBIG (271) 36
tARROW (272) 24
tDO (273) 63 64
tNULL (274) 76
tVOID_TYPE (275) 71
tINT_TYPE (276) 68
tFLOAT_TYPE (277) 69
tSTRING_TYPE (278) 70
tSIZEOF (279) 93
tOR (280) 92
tAND (281) 91
tFOR (282) 59
tOTHERWISE (283) 59
tTHEN (284) 60 61
tGE (285) 87
tLE (286) 88
tEQ (287) 90
tNE (288) 89
tUNARY (289)


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
file (55)
    on left: 1, on right: 0
declarations (56)
    on left: 2 3, on right: 1 3
declaration (57)
    on left: 4 5, on right: 2 3
var (58)
    on left: 6 7 8 9 10 11, on right: 4
function (59)
    on left: 12 13 14 15 16 17 18 19 20 21 22 23, on right: 5
default_return_value (60)
    on left: 24, on right: 12 13 14 15 16 17
literals (61)
    on left: 25 26, on right: 24
variables (62)
    on left: 27 28, on right: 12 13 14 18 19 20 28
variable (63)
    on left: 29, on right: 27 28
body (64)
    on left: 30 31 32 33 34, on right: 12 13 14 15 16 17 18 19 20 21
    22 23
prologo (65)
    on left: 35, on right: 30 33
epilogo (66)
    on left: 36, on right: 32 33
block (67)
    on left: 37 38 39 40, on right: 31 33 35 36 58
block_declarations (68)
    on left: 41 42, on right: 37 38 42
block_declaration (69)
    on left: 43 44 45, on right: 41 42
instructions (70)
    on left: 46 47, on right: 37 39 47
instruction (71)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59, on right: 46 47 59
    60 61 62 63 64 65
conditional_instruction (72)
    on left: 60 61, on right: 56
else (73)
    on left: 62, on right: 60
iteraction_instruction (74)
    on left: 63 64, on right: 57
finally (75)
    on left: 65, on right: 63
expression (76)
    on left: 66 67, on right: 49 50 67 104
type (77)
    on left: 68 69 70 71 72, on right: 6 7 8 9 10 11 12 13 14 15 16
    17 18 19 20 21 22 23 29 43 44 72
expr (78)
    on left: 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90
    91 92 93 94 95 96 97 98 99, on right: 6 7 8 43 48 59 60 61 63 64
    66 67 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95
    97 101
lval (79)
    on left: 100 101, on right: 96 97 98
string (80)
    on left: 102 103, on right: 75 103
function_call (81)
    on left: 104 105, on right: 45 99


State 0

    0 $accept: . file $end

    tVOID_TYPE    shift, and go to state 1
    tINT_TYPE     shift, and go to state 2
    tFLOAT_TYPE   shift, and go to state 3
    tSTRING_TYPE  shift, and go to state 4
    '<'           shift, and go to state 5

    file          go to state 6
    declarations  go to state 7
    declaration   go to state 8
    var           go to state 9
    function      go to state 10
    type          go to state 11


State 1

   71 type: tVOID_TYPE .

    $default  reduce using rule 71 (type)


State 2

   68 type: tINT_TYPE .

    $default  reduce using rule 68 (type)


State 3

   69 type: tFLOAT_TYPE .

    $default  reduce using rule 69 (type)


State 4

   70 type: tSTRING_TYPE .

    $default  reduce using rule 70 (type)


State 5

   72 type: '<' . type '>'

    tVOID_TYPE    shift, and go to state 1
    tINT_TYPE     shift, and go to state 2
    tFLOAT_TYPE   shift, and go to state 3
    tSTRING_TYPE  shift, and go to state 4
    '<'           shift, and go to state 5

    type  go to state 12


State 6

    0 $accept: file . $end

    $end  shift, and go to state 13


State 7

    1 file: declarations .
    3 declarations: declarations . declaration

    tVOID_TYPE    shift, and go to state 1
    tINT_TYPE     shift, and go to state 2
    tFLOAT_TYPE   shift, and go to state 3
    tSTRING_TYPE  shift, and go to state 4
    '<'           shift, and go to state 5

    $default  reduce using rule 1 (file)

    declaration  go to state 14
    var          go to state 9
    function     go to state 10
    type         go to state 11


State 8

    2 declarations: declaration .

    $default  reduce using rule 2 (declarations)


State 9

    4 declaration: var . ';'

    ';'  shift, and go to state 15


State 10

    5 declaration: function .

    $default  reduce using rule 5 (declaration)


State 11

    6 var: type . '*' tIDENTIFIER '=' expr
    7    | type . '?' tIDENTIFIER '=' expr
    8    | type . tIDENTIFIER '=' expr
    9    | type . '*' tIDENTIFIER
   10    | type . '?' tIDENTIFIER
   11    | type . tIDENTIFIER
   12 function: type . '?' tIDENTIFIER '(' variables ')' default_return_value body
   13         | type . '*' tIDENTIFIER '(' variables ')' default_return_value body
   14         | type . tIDENTIFIER '(' variables ')' default_return_value body
   15         | type . '?' tIDENTIFIER '(' ')' default_return_value body
   16         | type . '*' tIDENTIFIER '(' ')' default_return_value body
   17         | type . tIDENTIFIER '(' ')' default_return_value body
   18         | type . '?' tIDENTIFIER '(' variables ')' body
   19         | type . '*' tIDENTIFIER '(' variables ')' body
   20         | type . tIDENTIFIER '(' variables ')' body
   21         | type . '?' tIDENTIFIER '(' ')' body
   22         | type . '*' tIDENTIFIER '(' ')' body
   23         | type . tIDENTIFIER '(' ')' body

    tIDENTIFIER  shift, and go to state 16
    '*'          shift, and go to state 17
    '?'          shift, and go to state 18


State 12

   72 type: '<' type . '>'

    '>'  shift, and go to state 19


State 13

    0 $accept: file $end .

    $default  accept


State 14

    3 declarations: declarations declaration .

    $default  reduce using rule 3 (declarations)


State 15

    4 declaration: var ';' .

    $default  reduce using rule 4 (declaration)


State 16

    8 var: type tIDENTIFIER . '=' expr
   11    | type tIDENTIFIER .
   14 function: type tIDENTIFIER . '(' variables ')' default_return_value body
   17         | type tIDENTIFIER . '(' ')' default_return_value body
   20         | type tIDENTIFIER . '(' variables ')' body
   23         | type tIDENTIFIER . '(' ')' body

    '='  shift, and go to state 20
    '('  shift, and go to state 21

    $default  reduce using rule 11 (var)


State 17

    6 var: type '*' . tIDENTIFIER '=' expr
    9    | type '*' . tIDENTIFIER
   13 function: type '*' . tIDENTIFIER '(' variables ')' default_return_value body
   16         | type '*' . tIDENTIFIER '(' ')' default_return_value body
   19         | type '*' . tIDENTIFIER '(' variables ')' body
   22         | type '*' . tIDENTIFIER '(' ')' body

    tIDENTIFIER  shift, and go to state 22


State 18

    7 var: type '?' . tIDENTIFIER '=' expr
   10    | type '?' . tIDENTIFIER
   12 function: type '?' . tIDENTIFIER '(' variables ')' default_return_value body
   15         | type '?' . tIDENTIFIER '(' ')' default_return_value body
   18         | type '?' . tIDENTIFIER '(' variables ')' body
   21         | type '?' . tIDENTIFIER '(' ')' body

    tIDENTIFIER  shift, and go to state 23


State 19

   72 type: '<' type '>' .

    $default  reduce using rule 72 (type)


State 20

    8 var: type tIDENTIFIER '=' . expr

    tINTEGER     shift, and go to state 24
    tFLOAT       shift, and go to state 25
    tIDENTIFIER  shift, and go to state 26
    tSTRING      shift, and go to state 27
    tNULL        shift, and go to state 28
    tSIZEOF      shift, and go to state 29
    '+'          shift, and go to state 30
    '-'          shift, and go to state 31
    '['          shift, and go to state 32
    '~'          shift, and go to state 33
    '('          shift, and go to state 34

    expr           go to state 35
    lval           go to state 36
    string         go to state 37
    function_call  go to state 38


State 21

   14 function: type tIDENTIFIER '(' . variables ')' default_return_value body
   17         | type tIDENTIFIER '(' . ')' default_return_value body
   20         | type tIDENTIFIER '(' . variables ')' body
   23         | type tIDENTIFIER '(' . ')' body

    tVOID_TYPE    shift, and go to state 1
    tINT_TYPE     shift, and go to state 2
    tFLOAT_TYPE   shift, and go to state 3
    tSTRING_TYPE  shift, and go to state 4
    '<'           shift, and go to state 5
    ')'           shift, and go to state 39

    variables  go to state 40
    variable   go to state 41
    type       go to state 42


State 22

    6 var: type '*' tIDENTIFIER . '=' expr
    9    | type '*' tIDENTIFIER .
   13 function: type '*' tIDENTIFIER . '(' variables ')' default_return_value body
   16         | type '*' tIDENTIFIER . '(' ')' default_return_value body
   19         | type '*' tIDENTIFIER . '(' variables ')' body
   22         | type '*' tIDENTIFIER . '(' ')' body

    '='  shift, and go to state 43
    '('  shift, and go to state 44

    $default  reduce using rule 9 (var)


State 23

    7 var: type '?' tIDENTIFIER . '=' expr
   10    | type '?' tIDENTIFIER .
   12 function: type '?' tIDENTIFIER . '(' variables ')' default_return_value body
   15         | type '?' tIDENTIFIER . '(' ')' default_return_value body
   18         | type '?' tIDENTIFIER . '(' variables ')' body
   21         | type '?' tIDENTIFIER . '(' ')' body

    '='  shift, and go to state 45
    '('  shift, and go to state 46

    $default  reduce using rule 10 (var)


State 24

   73 expr: tINTEGER .

    $default  reduce using rule 73 (expr)


State 25

   74 expr: tFLOAT .

    $default  reduce using rule 74 (expr)


State 26

  100 lval: tIDENTIFIER .
  104 function_call: tIDENTIFIER . '(' expression ')'
  105              | tIDENTIFIER . '(' ')'

    '('  shift, and go to state 47

    $default  reduce using rule 100 (lval)


State 27

  102 string: tSTRING .

    $default  reduce using rule 102 (string)


State 28

   76 expr: tNULL .

    $default  reduce using rule 76 (expr)


State 29

   93 expr: tSIZEOF . '(' expr ')'

    '('  shift, and go to state 48


State 30

   78 expr: '+' . expr

    tINTEGER     shift, and go to state 24
    tFLOAT       shift, and go to state 25
    tIDENTIFIER  shift, and go to state 26
    tSTRING      shift, and go to state 27
    tNULL        shift, and go to state 28
    tSIZEOF      shift, and go to state 29
    '+'          shift, and go to state 30
    '-'          shift, and go to state 31
    '['          shift, and go to state 32
    '~'          shift, and go to state 33
    '('          shift, and go to state 34

    expr           go to state 49
    lval           go to state 36
    string         go to state 37
    function_call  go to state 38


State 31

   77 expr: '-' . expr

    tINTEGER     shift, and go to state 24
    tFLOAT       shift, and go to state 25
    tIDENTIFIER  shift, and go to state 26
    tSTRING      shift, and go to state 27
    tNULL        shift, and go to state 28
    tSIZEOF      shift, and go to state 29
    '+'          shift, and go to state 30
    '-'          shift, and go to state 31
    '['          shift, and go to state 32
    '~'          shift, and go to state 33
    '('          shift, and go to state 34

    expr           go to state 50
    lval           go to state 36
    string         go to state 37
    function_call  go to state 38


State 32

   95 expr: '[' . expr ']'

    tINTEGER     shift, and go to state 24
    tFLOAT       shift, and go to state 25
    tIDENTIFIER  shift, and go to state 26
    tSTRING      shift, and go to state 27
    tNULL        shift, and go to state 28
    tSIZEOF      shift, and go to state 29
    '+'          shift, and go to state 30
    '-'          shift, and go to state 31
    '['          shift, and go to state 32
    '~'          shift, and go to state 33
    '('          shift, and go to state 34

    expr           go to state 51
    lval           go to state 36
    string         go to state 37
    function_call  go to state 38


State 33

   79 expr: '~' . expr

    tINTEGER     shift, and go to state 24
    tFLOAT       shift, and go to state 25
    tIDENTIFIER  shift, and go to state 26
    tSTRING      shift, and go to state 27
    tNULL        shift, and go to state 28
    tSIZEOF      shift, and go to state 29
    '+'          shift, and go to state 30
    '-'          shift, and go to state 31
    '['          shift, and go to state 32
    '~'          shift, and go to state 33
    '('          shift, and go to state 34

    expr           go to state 52
    lval           go to state 36
    string         go to state 37
    function_call  go to state 38


State 34

   94 expr: '(' . expr ')'

    tINTEGER     shift, and go to state 24
    tFLOAT       shift, and go to state 25
    tIDENTIFIER  shift, and go to state 26
    tSTRING      shift, and go to state 27
    tNULL        shift, and go to state 28
    tSIZEOF      shift, and go to state 29
    '+'          shift, and go to state 30
    '-'          shift, and go to state 31
    '['          shift, and go to state 32
    '~'          shift, and go to state 33
    '('          shift, and go to state 34

    expr           go to state 53
    lval           go to state 36
    string         go to state 37
    function_call  go to state 38


State 35

    8 var: type tIDENTIFIER '=' expr .
   80 expr: expr . '+' expr
   81     | expr . '-' expr
   82     | expr . '*' expr
   83     | expr . '/' expr
   84     | expr . '%' expr
   85     | expr . '<' expr
   86     | expr . '>' expr
   87     | expr . tGE expr
   88     | expr . tLE expr
   89     | expr . tNE expr
   90     | expr . tEQ expr
   91     | expr . tAND expr
   92     | expr . tOR expr
  101 lval: expr . '[' expr ']'

    tOR   shift, and go to state 54
    tAND  shift, and go to state 55
    tGE   shift, and go to state 56
    tLE   shift, and go to state 57
    tEQ   shift, and go to state 58
    tNE   shift, and go to state 59
    '>'   shift, and go to state 60
    '<'   shift, and go to state 61
    '+'   shift, and go to state 62
    '-'   shift, and go to state 63
    '*'   shift, and go to state 64
    '/'   shift, and go to state 65
    '%'   shift, and go to state 66
    '['   shift, and go to state 67

    $default  reduce using rule 8 (var)


State 36

   96 expr: lval .
   97     | lval . '=' expr
   98     | lval . '?'

    '='  shift, and go to state 68
    '?'  shift, and go to state 69

    $default  reduce using rule 96 (expr)


State 37

   75 expr: string .
  103 string: string . tSTRING

    tSTRING  shift, and go to state 70

    $default  reduce using rule 75 (expr)


State 38

   99 expr: function_call .

    $default  reduce using rule 99 (expr)


State 39

   17 function: type tIDENTIFIER '(' ')' . default_return_value body
   23         | type tIDENTIFIER '(' ')' . body

    tBIG    shift, and go to state 71
    tARROW  shift, and go to state 72
    '@'     shift, and go to state 73
    '{'     shift, and go to state 74

    $default  reduce using rule 34 (body)

    default_return_value  go to state 75
    body                  go to state 76
    prologo               go to state 77
    epilogo               go to state 78
    block                 go to state 79


State 40

   14 function: type tIDENTIFIER '(' variables . ')' default_return_value body
   20         | type tIDENTIFIER '(' variables . ')' body
   28 variables: variables . ',' variable

    ')'  shift, and go to state 80
    ','  shift, and go to state 81


State 41

   27 variables: variable .

    $default  reduce using rule 27 (variables)


State 42

   29 variable: type . tIDENTIFIER

    tIDENTIFIER  shift, and go to state 82


State 43

    6 var: type '*' tIDENTIFIER '=' . expr
